syntax = "proto3";

package ai.metathings.service.identity;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

message DeleteGroupRequest {
	google.protobuf.StringValue group_id = 1 [(validator.field) = {msg_exists: true}];
}
